Improve how reserved soldiers work.